Added counts to Capo page

--- a/KcCauldronCapo.csproj
+++ b/KcCauldronCapo.csproj
@@ -185,6 +185,9 @@
     <Compile Include="Model\ChantHistory.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\CHANT_COUNT.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
