--- a/KcCauldronCapo.csproj
+++ b/KcCauldronCapo.csproj
@@ -221,8 +221,12 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\album_template.jpg" />
+    <Content Include="Content\images\besler.jpg" />
+    <Content Include="Content\images\collin.jpg" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
+    <Content Include="Content\images\kei.jpg" />
+    <Content Include="Content\images\relentless.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
