--- a/KcCauldronCapo.csproj
+++ b/KcCauldronCapo.csproj
@@ -220,12 +220,28 @@
     <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\1.jpg" />
+    <Content Include="Content\images\10.jpg" />
+    <Content Include="Content\images\11.jpg" />
+    <Content Include="Content\images\2.jpg" />
+    <Content Include="Content\images\3.jpg" />
+    <Content Include="Content\images\4.jpg" />
+    <Content Include="Content\images\5.jpg" />
+    <Content Include="Content\images\6.jpg" />
+    <Content Include="Content\images\7.jpg" />
+    <Content Include="Content\images\8.jpg" />
+    <Content Include="Content\images\9.jpg" />
+    <Content Include="Content\images\960cover2.jpg" />
     <Content Include="Content\images\album_template.jpg" />
     <Content Include="Content\images\aurelien_cover.jpg" />
     <Content Include="Content\images\besler_cover.jpg" />
+    <Content Include="Content\images\default.jpg" />
     <Content Include="Content\images\glyphicons-halflings-white.png" />
     <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\images\guillotine_cover.jpg" />
+    <Content Include="Content\images\Guillotine_cover960.jpg" />
+    <Content Include="Content\images\houston.jpg" />
+    <Content Include="Content\images\kei.jpg" />
     <Content Include="Content\images\vamos_cover.jpg" />
     <Content Include="Content\images\WeDont_cover.jpg" />
     <Content Include="Content\images\WeDont_cover960.jpg" />
