--- a/KcCauldronCapo.csproj
+++ b/KcCauldronCapo.csproj
@@ -223,6 +223,11 @@
     <Content Include="Content\images\1.jpg" />
     <Content Include="Content\images\10.jpg" />
     <Content Include="Content\images\11.jpg" />
+    <Content Include="Content\images\12.jpg" />
+    <Content Include="Content\images\13.jpg" />
+    <Content Include="Content\images\14.jpg" />
+    <Content Include="Content\images\15.jpg" />
+    <Content Include="Content\images\16.jpg" />
     <Content Include="Content\images\2.jpg" />
     <Content Include="Content\images\3.jpg" />
     <Content Include="Content\images\4.jpg" />
