--- a/KcCauldronCapo.csproj
+++ b/KcCauldronCapo.csproj
@@ -260,6 +260,7 @@
     <Content Include="Content\images\vamos_cover.jpg" />
     <Content Include="Content\images\WeDont_cover.jpg" />
     <Content Include="Content\images\WeDont_cover960.jpg" />
+    <Content Include="Content\images\welcome-blue-hell.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
